--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,10 @@ python = "^3.10"
 pynvim = "^0.4.3"
 maturin = "^0.14.9"
 
+[tool.poetry.group.dev.dependencies]
+isort = "^5.11.4"
+black = "^22.12.0"
+
 [build-system]
 requires = ["maturin>=0.14,<0.15"]
 build-backend = "maturin"
