--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ maturin = "^0.14.9"
 [tool.poetry.group.dev.dependencies]
 isort = "^5.11.4"
 black = "^22.12.0"
+timer = "^0.2.2"
+pytest = "^7.2.0"
 
 [build-system]
 requires = ["maturin>=0.14,<0.15"]
