--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ isort = "^5.11.4"
 black = "^22.12.0"
 timer = "^0.2.2"
 pytest = "^7.2.0"
+pytest-cov = "^4.0.0"
 
 [build-system]
 requires = ["maturin>=0.14,<0.15"]
